examples/python/dxbridge_ctypes.py


        self.dll.DXBridge_CompileShader.argtypes = [
            DXBDevice,
            ctypes.POINTER(DXBShaderDesc),
            ctypes.POINTER(DXBShader),
        ]
        self.dll.DXBridge_CompileShader.restype = ctypes.c_int32

        self.dll.DXBridge_DestroyShader.argtypes = [DXBShader]
        self.dll.DXBridge_DestroyShader.restype = None

        self.dll.DXBridge_CreateInputLayout.argtypes = [
            DXBDevice,
            ctypes.POINTER(DXBInputElementDesc),
            ctypes.c_uint32,
            DXBShader,
            ctypes.POINTER(DXBInputLayout),
        ]
        self.dll.DXBridge_CreateInputLayout.restype = ctypes.c_int32

        self.dll.DXBridge_DestroyInputLayout.argtypes = [DXBInputLayout]
        self.dll.DXBridge_DestroyInputLayout.restype = None

        self.dll.DXBridge_CreatePipelineState.argtypes = [
            DXBDevice,
            ctypes.POINTER(DXBPipelineDesc),
            ctypes.POINTER(DXBPipeline),
        ]
        self.dll.DXBridge_CreatePipelineState.restype = ctypes.c_int32

        self.dll.DXBridge_DestroyPipeline.argtypes = [DXBPipeline]
        self.dll.DXBridge_DestroyPipeline.restype = None

        self.dll.DXBridge_CreateBuffer.argtypes = [
            DXBDevice,
            ctypes.POINTER(DXBBufferDesc),
            ctypes.POINTER(DXBBuffer),
        ]
        self.dll.DXBridge_CreateBuffer.restype = ctypes.c_int32

        self.dll.DXBridge_UploadData.argtypes = [
            DXBBuffer,
            ctypes.c_void_p,
            ctypes.c_uint32,
        ]
        self.dll.DXBridge_UploadData.restype = ctypes.c_int32

        self.dll.DXBridge_DestroyBuffer.argtypes = [DXBBuffer]
        self.dll.DXBridge_DestroyBuffer.restype = None

        self.dll.DXBridge_BeginFrame.argtypes = [DXBDevice]
        self.dll.DXBridge_BeginFrame.restype = ctypes.c_int32

        self.dll.DXBridge_SetRenderTargets.argtypes = [DXBDevice, DXBRTV, DXBDSV]
        self.dll.DXBridge_SetRenderTargets.restype = ctypes.c_int32

        self.dll.DXBridge_ClearRenderTarget.argtypes = [
            DXBRTV,
            ctypes.POINTER(ctypes.c_float),
        ]
        self.dll.DXBridge_ClearRenderTarget.restype = ctypes.c_int32

        self.dll.DXBridge_ClearDepthStencil.argtypes = [
            DXBDSV,
            ctypes.c_float,
            ctypes.c_uint8,
        ]
        self.dll.DXBridge_ClearDepthStencil.restype = ctypes.c_int32

        self.dll.DXBridge_SetViewport.argtypes = [
            DXBDevice,
            ctypes.POINTER(DXBViewport),
        ]
        self.dll.DXBridge_SetViewport.restype = ctypes.c_int32

        self.dll.DXBridge_SetPipeline.argtypes = [DXBDevice, DXBPipeline]
        self.dll.DXBridge_SetPipeline.restype = ctypes.c_int32

        self.dll.DXBridge_SetVertexBuffer.argtypes = [
            DXBDevice,
            DXBBuffer,
            ctypes.c_uint32,
            ctypes.c_uint32,
        ]
        self.dll.DXBridge_SetVertexBuffer.restype = ctypes.c_int32

        self.dll.DXBridge_Draw.argtypes = [
            DXBDevice,
            ctypes.c_uint32,
            ctypes.c_uint32,
        ]
        self.dll.DXBridge_Draw.restype = ctypes.c_int32

        self.dll.DXBridge_EndFrame.argtypes = [DXBDevice]
        self.dll.DXBridge_EndFrame.restype = ctypes.c_int32

        self.dll.DXBridge_Present.argtypes = [DXBSwapChain, ctypes.c_uint32]
        self.dll.DXBridge_Present.restype = ctypes.c_int32

    def get_last_error(self) -> str:
        buffer = ctypes.create_string_buffer(512)
        self.dll.DXBridge_GetLastError(buffer, len(buffer))
        return buffer.value.decode("utf-8", errors="replace")

    def get_last_hresult(self) -> int:
        return int(self.dll.DXBridge_GetLastHRESULT())

    def describe_failure(self, result: int) -> str:
        name = RESULT_NAMES.get(int(result), f"DXBResult({int(result)})")
        message = self.get_last_error()
        hresult = format_hresult(self.get_last_hresult())
        if message:
            return f"{name}: {message} (HRESULT {hresult})"
        return f"{name} (HRESULT {hresult})"

    def raise_for_result(self, result: int, function_name: str) -> None:
        if int(result) != DXB_OK:
            raise DXBridgeError(
                f"{function_name} failed: {self.describe_failure(result)}"
            )

    def set_log_callback(self, callback) -> None:
        if callback is None:
            self._callback_ref = None
            self.dll.DXBridge_SetLogCallback(DXBLogCallback(), None)
            return

        def bridge(level: int, msg: bytes, user_data) -> None:
            text = msg.decode("utf-8", errors="replace") if msg else ""
            callback(level, text, user_data)

        self._callback_ref = DXBLogCallback(bridge)
        self.dll.DXBridge_SetLogCallback(self._callback_ref, None)

    def get_version(self) -> int:
        return int(self.dll.DXBridge_GetVersion())

    def init(self, backend: int) -> None:
        self.raise_for_result(self.dll.DXBridge_Init(backend), "DXBridge_Init")

    def supports_feature(self, feature_flag: int) -> bool:
        return bool(self.dll.DXBridge_SupportsFeature(feature_flag))

    def query_capability(
        self,
        capability: int,
        backend: int,
        *,
        adapter_index: int = 0,
        format_code: int = DXB_FORMAT_UNKNOWN,
        device: int = DXBRIDGE_NULL_HANDLE,
    ) -> DXBCapabilityInfo:
        query = make_versioned(
            DXBCapabilityQuery,
            capability=capability,
            backend=backend,
            adapter_index=adapter_index,
            format=format_code,
            device=DXBDevice(device),
        )
        info = make_versioned(DXBCapabilityInfo)
        self.raise_for_result(
            self.dll.DXBridge_QueryCapability(ctypes.byref(query), ctypes.byref(info)),
            "DXBridge_QueryCapability",
        )
        return info

    def query_backend_available(self, backend: int) -> DXBCapabilityInfo:
        return self.query_capability(DXB_CAPABILITY_BACKEND_AVAILABLE, backend)

    def query_debug_layer_available(self, backend: int) -> DXBCapabilityInfo:
        return self.query_capability(DXB_CAPABILITY_DEBUG_LAYER_AVAILABLE, backend)

    def query_gpu_validation_available(self, backend: int) -> DXBCapabilityInfo:
        return self.query_capability(DXB_CAPABILITY_GPU_VALIDATION_AVAILABLE, backend)

    def query_adapter_count(self, backend: int) -> DXBCapabilityInfo:
        return self.query_capability(DXB_CAPABILITY_ADAPTER_COUNT, backend)

    def query_adapter_software(
        self, backend: int, adapter_index: int
    ) -> DXBCapabilityInfo:
        return self.query_capability(
            DXB_CAPABILITY_ADAPTER_SOFTWARE,
            backend,
            adapter_index=adapter_index,
        )

    def query_adapter_max_feature_level(
        self, backend: int, adapter_index: int
    ) -> DXBCapabilityInfo:
        return self.query_capability(
            DXB_CAPABILITY_ADAPTER_MAX_FEATURE_LEVEL,
            backend,
            adapter_index=adapter_index,
        )

    def shutdown(self) -> None:
        self.dll.DXBridge_Shutdown()

    def enumerate_adapters(self) -> list[DXBAdapterInfo]:
        count = ctypes.c_uint32(0)
        self.raise_for_result(
            self.dll.DXBridge_EnumerateAdapters(None, ctypes.byref(count)),
            "DXBridge_EnumerateAdapters(count)",
        )
        if count.value == 0:
            return []

        adapters = (DXBAdapterInfo * count.value)()
        for adapter in adapters:
            adapter.struct_version = DXBRIDGE_STRUCT_VERSION

        self.raise_for_result(
            self.dll.DXBridge_EnumerateAdapters(adapters, ctypes.byref(count)),
            "DXBridge_EnumerateAdapters(fill)",
        )
        return list(adapters[: count.value])

    def create_device(
        self, backend: int, adapter_index: int = 0, flags: int = 0
    ) -> int:
        desc = make_versioned(
            DXBDeviceDesc,
            backend=backend,
            adapter_index=adapter_index,
            flags=flags,
        )
        handle = DXBDevice(DXBRIDGE_NULL_HANDLE)
        self.raise_for_result(
            self.dll.DXBridge_CreateDevice(ctypes.byref(desc), ctypes.byref(handle)),
            "DXBridge_CreateDevice",
        )
        return int(handle.value)

    def destroy_device(self, device: int) -> None:
        self.dll.DXBridge_DestroyDevice(DXBDevice(device))

    def get_feature_level(self, device: int) -> int:
        return int(self.dll.DXBridge_GetFeatureLevel(DXBDevice(device)))

    def create_swapchain(
        self,
        device: int,
        hwnd: int,
        width: int,
        height: int,
        *,
        format_code: int = DXB_FORMAT_RGBA8_UNORM,
        buffer_count: int = 2,
        flags: int = 0,
    ) -> int:
        desc = make_versioned(
            DXBSwapChainDesc,
            hwnd=ctypes.c_void_p(hwnd),
            width=width,
            height=height,
            format=format_code,
            buffer_count=buffer_count,
            flags=flags,
        )
        handle = DXBSwapChain(DXBRIDGE_NULL_HANDLE)
        self.raise_for_result(
            self.dll.DXBridge_CreateSwapChain(
                DXBDevice(device),
                ctypes.byref(desc),
                ctypes.byref(handle),
            ),
            "DXBridge_CreateSwapChain",
        )
        return int(handle.value)

    def destroy_swapchain(self, swapchain: int) -> None:
        self.dll.DXBridge_DestroySwapChain(DXBSwapChain(swapchain))

    def resize_swapchain(self, swapchain: int, width: int, height: int) -> None:
        self.raise_for_result(
            self.dll.DXBridge_ResizeSwapChain(
                DXBSwapChain(swapchain),
                ctypes.c_uint32(width),
                ctypes.c_uint32(height),
            ),
            "DXBridge_ResizeSwapChain",
        )

    def get_back_buffer(self, swapchain: int) -> int:
        handle = DXBRenderTarget(DXBRIDGE_NULL_HANDLE)
        self.raise_for_result(
            self.dll.DXBridge_GetBackBuffer(
                DXBSwapChain(swapchain), ctypes.byref(handle)
            ),
            "DXBridge_GetBackBuffer",
        )
        return int(handle.value)

    def create_rtv(self, device: int, render_target: int) -> int:
        handle = DXBRTV(DXBRIDGE_NULL_HANDLE)
        self.raise_for_result(
            self.dll.DXBridge_CreateRenderTargetView(
                DXBDevice(device),
                DXBRenderTarget(render_target),
                ctypes.byref(handle),
            ),
            "DXBridge_CreateRenderTargetView",
        )
        return int(handle.value)

    def destroy_rtv(self, rtv: int) -> None:
        self.dll.DXBridge_DestroyRTV(DXBRTV(rtv))

    def compile_shader(
        self,
        device: int,
        stage: int,
        source_code: str,
        source_name: str,
        entry_point: str,
        target: str,
        compile_flags: int = 0,
    ) -> int:
        source_bytes = source_code.encode("utf-8")
        desc = make_versioned(
            DXBShaderDesc,
            stage=stage,
            source_code=ctypes.c_char_p(source_bytes),
            source_size=0,
            source_name=ctypes.c_char_p(source_name.encode("utf-8")),
            entry_point=ctypes.c_char_p(entry_point.encode("utf-8")),
            target=ctypes.c_char_p(target.encode("utf-8")),
            compile_flags=compile_flags,
        )
        handle = DXBShader(DXBRIDGE_NULL_HANDLE)
        self.raise_for_result(
            self.dll.DXBridge_CompileShader(
                DXBDevice(device), ctypes.byref(desc), ctypes.byref(handle)
            ),
            "DXBridge_CompileShader",
        )
        return int(handle.value)

    def destroy_shader(self, shader: int) -> None:
        self.dll.DXBridge_DestroyShader(DXBShader(shader))
